# The-Road-to-Infinity

./: test.cpp
PRACTICE/: CMakeLists.txt  chapter1.cpp  execute.cpp  fragment.glsl  glad.c  vertex.glsl
PRACTICE/resources/libraries/include/dve/: header.h
PRACTICE/resources/libraries/include/glad/: glad.h
